force-app/main/default/objects/junctionObj__c/fields/parent2__c.field-meta.xml
<CustomField>
    <fullName>parent2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>parent2</label>
    <referenceTo>parent2__c</referenceTo>
    <relationshipLabel>junctionObjs</relationshipLabel>
    <relationshipName>junctionObjs</relationshipName>
    <type>Lookup</type>
</CustomField>