force-app/main/default/objects/junctionObj__c/fields/parent3__c.field-meta.xml
<CustomField>
    <fullName>parent3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>parent3</label>
    <referenceTo>parent3__c</referenceTo>
    <relationshipLabel>junctionObjs</relationshipLabel>
    <relationshipName>junctionObjs</relationshipName>
    <type>Lookup</type>
</CustomField>