force-app/main/default/objects/junctionObj__c/fields/parent4__c.field-meta.xml
<CustomField>
    <fullName>parent4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>parent4</label>
    <referenceTo>parent4__c</referenceTo>
    <relationshipLabel>junctionObjs</relationshipLabel>
    <relationshipName>junctionObjs</relationshipName>
    <type>Lookup</type>
</CustomField>