force-app/main/default/objects/junctionObj__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EmailId__c</columns>
    <columns>companyName__c</columns>
    <columns>isProduct__c</columns>
    <columns>parent1__c</columns>
    <columns>parent2__c</columns>
    <columns>parent4__c</columns>
    <columns>parent3__c</columns>
    <columns>parent5__c</columns>
    <columns>parent6__c</columns>
    <columns>phonenumber__c</columns>
    <columns>Natonality__c</columns>
    <columns>Profit__c</columns>
    <columns>servicetype__c</columns>
    <columns>Establishment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>